--- a/Contacto.html
+++ b/Contacto.html
@@ -66,11 +66,9 @@
                     <label for="message" class="messagelabel">Mensaje</label>
                     <textarea class="message" name="message" rows="5"  cols="23"  placeholder="Escriba aquí su mensaje"></textarea><br>
                 </div>
-                <div></div>
-                <div>
                 <input type="hidden" name="grupo" value="d" />
-                </div>
                 <div class="submit_form">
+                    <input type="reset"  class="btn-reset" value="Borrar">
                     <input type="submit" class="btn-submit" value="Enviar">
                 </div>
             </div>
