--- a/index.html
+++ b/index.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta Tags -->
     <meta name="title" content="Guayerd Bikes">
-    <meta name="description" content="Bicicletas de competición y urbanas. Somos fabricantes de las mejores bicicletas de la región. Atención personalizada y venta de accesorios.">
+    <meta name="description"
+        content="Bicicletas de competición y urbanas. Somos fabricantes de las mejores bicicletas de la región. Atención personalizada y venta de accesorios.">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://metatags.io/">
     <meta property="og:title" content="Guayerd">
-    <meta property="og:description" content="Bicicletas de competición y urbanas. Somos fabricantes de las mejores bicicletas de la región. Atención personalizada y venta de accesorios.">
+    <meta property="og:description"
+        content="Bicicletas de competición y urbanas. Somos fabricantes de las mejores bicicletas de la región. Atención personalizada y venta de accesorios.">
     <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://metatags.io/">
     <meta property="twitter:title" content="Guayerd">
-    <meta property="twitter:description" content="Bicicletas de competición y urbanas. Somos fabricantes de las mejores bicicletas de la región. Atención personalizada y venta de accesorios.">
-    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="twitter:description"
+        content="Bicicletas de competición y urbanas. Somos fabricantes de las mejores bicicletas de la región. Atención personalizada y venta de accesorios.">
+    <meta property="twitter:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
     <title>Guayerd Bikes - Bicicletas de Competición y Urbanas.</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <header class="header">
-        <div class="container name-nav-list"><h1 class="main-text">Guayerd Bikes</h1>
-            <nav class="navigation">        
+        <div class="container name-nav-list">
+            <h1 class="main-text">Guayerd Bikes</h1>
+            <nav class="navigation">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Productos.html">Productos</a></li>
                     <li><a href="Contacto.html">Contacto</a></li>
-                </ul>   
+                </ul>
             </nav>
         </div>
     </header>
 
-    <main class="main"> 
+    <main class="main">
         <div class="container">
-            <img src="guayerdBikes-logo.jpg" alt="">
+            <img src="guayerdBikes-logo.jpg" alt="bicicleta-portada">
             <h1>Guayerd Bikes</h1>
             <p> Bill Jobs (1947-2003) fue el fundador de Guayerd Bikes. Un auténtico visionario que decidió
                 dedicar su vida a la bicicleta después de un viaje a EE.UU en los ’70. En dicho viaje Bill
@@ -126,7 +133,7 @@
             <h1>Premios</h1>
             <table>
                 <tr>
-                    <th>Año</th> 
+                    <th>Año</th>
                     <th>Premio</th>
                 </tr>
                 <tr>
@@ -151,8 +158,9 @@
                 </tr>
             </table>
         </div>
-    </main>  
+    </main>
     <footer class="clear">Grupo D - 2020
-    </footer> 
+    </footer>
 </body>
+
 </html>
